# SimTradeLab

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: build-wheels.yml  publish.yml  release-notes.yml  test.yml
docs/: ARCHITECTURE.md  CONTRIBUTING.md  DEVELOPMENT_RULES.md  IDE_SETUP.md  INSTALLATION.md  PTrade_API_Complete_Reference.md  PTrade_API_Implementation_Status.md  PTrade_API_Summary.json  PTrade_API_Summary.md  PTrade_API_mini_Reference.md  PTrade_Objects_Complete_Summary.md  PYPI_INSTALLATION_GUIDE.md  Ptrade财务数据API.json  TOOLS.md
licenses/: LICENSE-COMMERCIAL.md  LICENSE-COMMERCIAL.zh-CN.md  LICENSE.zh-CN
scripts/: AUTO_RELEASE_NOTES_GUIDE.md  RELEASE.md  generate_release_notes.py  release.py
src/simtradelab/: AGENTS.md  __init__.py
src/simtradelab/backtest/: config.py  optimizer_framework.py  run_backtest.py  runner.py  stats.py  stats_collector.py
src/simtradelab/cli/: data_tools.py
src/simtradelab/ptrade/: __init__.py  adj_cache.py  adj_pre_cache.py  api.py  cache_manager.py  config_manager.py  context.py  data_context.py  lifecycle_config.py  lifecycle_controller.py  object.py  order_processor.py  storage.py  strategy_data_analyzer.py  strategy_engine.py  strategy_validator.py
src/simtradelab/research/: api.py  notebook.ipynb
src/simtradelab/service/: __init__.py  data_server.py
src/simtradelab/trading/: todo.txt
src/simtradelab/utils/: config.py  fstring_fixer.py  paths.py  perf.py  performance_config.py  py35_compat_checker.py
strategies/5mv/: backtest.py
strategies/5mv/optimization/: optimize_params.py  optimized_strategy.py
strategies/simple/: backtest.py
typings/: builtins.pyi
