# Poetry configuration
[tool.poetry]
name = "simtradelab"
version = "2.0.0"
description = "开源策略回测框架，灵感来自PTrade的事件驱动模型，提供轻量、清晰、可插拔的策略验证环境"
authors = ["kay <kayou@duck.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "simtradelab", from = "src"}]
homepage = "https://github.com/kay-ou/SimTradeLab"
repository = "https://github.com/kay-ou/SimTradeLab"
documentation = "https://github.com/kay-ou/SimTradeLab/tree/main/docs"
keywords = ["quantitative", "backtest", "trading", "strategy", "ptrade", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
# 核心数据处理
pandas = "*" # 0.23.4
numpy = "<2.0" # 1.11.2
h5py = ">=3.8,<4.0"
tables = "<3.10"

# 性能优化
cachetools = "^5.3.0"  # LRU缓存
joblib = "^1.3.0"  # 并行处理

# 图表与界面
matplotlib = "^3.7.0"  # 图表绘制
tqdm = "^4.67.1"  # 进度条

# 配置验证
pydantic = "^2.12.5"

# 技术指标计算
ta-lib = "*" #0.4.10

# 优化器（可选）
optuna = {version = "^3.0.0", optional = true}

[tool.poetry.extras]
optimizer = ["optuna"]

[tool.poetry.group.dev.dependencies]
baostock = "^0.8.9"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
