# Poetry configuration
[tool.poetry]
name = "simtradelab"
version = "2.1.0"
description = "开源策略回测框架，灵感来自PTrade的事件驱动模型，提供轻量、清晰、可插拔的策略验证环境"
authors = ["kay <kayou@duck.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
packages = [{include = "simtradelab", from = "src"}]
homepage = "https://github.com/kay-ou/SimTradeLab"
repository = "https://github.com/kay-ou/SimTradeLab"
documentation = "https://github.com/kay-ou/SimTradeLab/tree/main/docs"
keywords = ["quantitative", "backtest", "trading", "strategy", "ptrade", "finance"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Financial and Insurance Industry",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "Topic :: Office/Business :: Financial :: Investment",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "*"
numpy = "<2.0"
cachetools = "^5.3.0"
joblib = "^1.3.0"
matplotlib = "^3.7.0"
tqdm = "^4.67.1"
pydantic = "^2.12.5"
ta-lib = "*"
optuna = {version = "^3.0.0", optional = true}

[tool.poetry.extras]
optimizer = ["optuna"]

[tool.poetry.group.dev.dependencies]
baostock = "^0.8.9"
jupyter = "^1.1.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
